fixing bug where back to top button text was visible at smaller sizes. it's now hidden when the screen is less than 70em wide

--- a/assets/styles/screen-lg.css
+++ b/assets/styles/screen-lg.css
@@ -165,7 +165,7 @@ body {
 ------------------------------------------------------------------------ */
 @media only screen and (min-width: 70em) {
     .top {
-        display: none;
+        display: block;
         position: fixed;
         bottom: -80px;
         right: 20px;
